--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.17.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.3.0",
     "re-resizable": "^6.9.16",
     "react": "^18.2.0",
@@ -39,6 +40,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
     "react-youtube": "^10.1.0",
@@ -46,6 +48,7 @@
     "reactstrap": "^9.1.9",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.18.0"
   },
